# tx2test

./: .gitignore  CMakeLists.txt
include/: cudaGmm.cuh  cudaUtil.cuh
src/: cudaGmm.cu  cudaUtil.cu
test/: cudatest.cc
